style.css
key {
    font-family: "Courier", "Courier New", "Monaco", "monospace";
    padding: 10px 5px;
    border-top: 1px solid #888888;
    border-right: 8px solid #888888;
    border-bottom: 8px solid #888888;
    border-left: 1px solid #888888;
    border-radius: 4px 0 0 0;
    box-shadow: 1px 1px 2px #888888;
    color: black;
    display: inline;
}

.single {
    padding: 10px 15px;
}

div {
    display: inline;
}

.active {
    background-color: #dddddd;
}

.tab {
    padding-left: 20px;
    padding-right: 20px;
}

.bck {
    padding-left: 24px;
    padding-right: 24px;
}

.caps {
    padding-left: 24px;
    padding-right: 24px;
}

.slash {
    padding-left: 23px;
    padding-right: 23px;
    
}

.enter {
    padding-left: 25px;
    padding-right: 25px;
}

.shift {
    padding-left: 35px;
    padding-right: 35px;
}

.ctrl, .cmd, .alt {
    padding-left: 20px;
    padding-right: 20px;
}

.spacebar {
    padding-left: 130px;
    padding-right: 130px;
    margin: 0 6px 0 3px;
}

.upper {
    text-transform: uppercase;
}

.keyboard-row {
    margin-bottom: 30px;
}

h1, input {
    margin-bottom: 30px;
}

header {
    height: 80px;
    margin-top: -20px;
}

